objects/HealthCloudGA__ServiceOrchestrationSetting__mdt.object
<CustomObject>
    <description>Sequence of service classes to execute</description>
    <fields>
        <fullName>HealthCloudGA__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ProcessId__c</fullName>
        <label>Process Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StepClass__c</fullName>
        <label>Step Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Step__c</fullName>
        <label>Step</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Orchestration Setting</label>
    <pluralLabel>Service Orchestration Settings</pluralLabel>
</CustomObject>